# laravel-observatory

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  composer.json  docker-compose.dev.yml  docker-compose.preview.yml  docker-compose.yml  phpunit.xml
.github/workflows/: ci.yml  deploy.yml  laravel-tests.yml  run-tests.yml
backend/: .env.example  Dockerfile  SETUP_POSTGRESQL.md  alembic.ini  pyproject.toml  requirements.txt  run.py
backend/alembic/: README  env.py
backend/alembic/versions/: 001_initial_migration.py
backend/app/: config.py  constants.py  database.py  exceptions.py  main.py
backend/app/api/: auth.py  frontend_logs.py  inbound.py  ingest.py  jobs.py  jobs_query.py  logs.py  organizations.py  outbound.py  projects.py  settings.py
backend/app/api/stats/: __init__.py  _common.py  dashboard.py  errors.py  performance.py  traffic.py  users.py
backend/app/models/: auth.py  database.py  frontend_logs.py  ingest.py  jobs.py  log.py  organization.py  outbound.py  project.py  stats.py
backend/app/services/: api_keys.py  auth.py  clickhouse.py  database.py  ingest_service.py  organizations.py  projects.py  query_builder.py
backend/tests/: conftest.py  seed_job_data.py  test_auth_service.py  test_health.py  test_ingest.py  test_models.py  test_query_builder.py
config/: observatory.php
dashboards/: observatory-dashboard.json  service-health-dashboard.json
frontend/: Dockerfile
k8s/: loki-values.yaml
src/: ObservatoryServiceProvider.php
src/Collectors/: JobCollector.php  (+3 more)
tests/: TestCase.php
(+28 files in other folders)
