[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sid-monitoring-backend"
version = "0.1.0"
description = "Backend API for Sid Monitoring Dashboard"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "clickhouse-connect==0.6.22",
    "python-dotenv==1.0.0",
    "pydantic==2.5.2",
    "pydantic-settings==2.1.0",
    "python-multipart==0.0.6",
    "httpx==0.25.2",
    "sqlalchemy==2.0.23",
    "asyncpg==0.29.0",
    "alembic==1.13.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--strict-markers -v"

[tool.ruff]
line-length = 120
exclude = ["tests/", "data/", "alembic/"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501", "N818"]
